<resources>
    <string name="app_name">GameApplication170715</string>

    <string name="main_menu_question">Please pick a game from the selection below:</string>
    <string name="main_menu_whaaat">OMG BIG LETTERS</string>
    <string name="main_menu_button_n_and_c">Naughts and Crosses</string>
    <string name="main_menu_button_connect_four">Connect Four</string>
    <string name="main_menu_button_chess">Chess!!!!!</string>
    <string name="action_settings">Settings</string>


    <string name="player_one_no_of_wins_text">Player 1: </string>
    <string name="player_two_no_of_wins_text">Player 2: </string>
    <string name="player_one_has_won_text">Player 1 has won!</string>
    <string name="player_two_has_won_text">Player 2 has won!</string>
    <string name="draw_text">Draw.</string>
    <string name="n_and_c_grid">123456789</string>
    <string name="c_f_columns">1234567</string>


    <string name="title_activity_naughts_and_crosses">Naughts And Crosses</string>
    <string name="title_activity_naughts_and_crosses_game_finished">Naughts And Crosses Game
        Finished Activity
    </string>
    <string name="title_activity_connect_four">ConnectFourActivity</string>
    <string name="title_activity_connect__four__game__finished">Connect_Four_Game_Finished</string>
    <string name="title_activity_connect_four_game_finished">Connect Four Game Finished Activity
    </string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_chess">Chess Activity</string>


</resources>
